--- a/src/my_first_package/CMakeLists.txt
+++ b/src/my_first_package/CMakeLists.txt
@@ -55,3 +55,16 @@ if(BUILD_TESTING)
 endif()
 
 ament_package()
+
+unset(NODES)
+set(NODES simple_publisher;simple_subscriber)
+foreach(target IN LISTS NODES)
+  add_executable(${target}_node src/${target}_main.cpp src/${target}.cpp)
+  ament_target_dependencies(${target}_node rclcpp std_msgs)
+  install(TARGETS ${target}_node DESTINATION lib/${PROJECT_NAME})
+  target_include_directories(${target}_node
+    PUBLIC
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+      $<INSTALL_INTERFACE:include>
+  )
+endforeach()
